Update getChartValueDTOS method to return 3 months interval data